// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test adding custom config 1`] = `
{
  "Parameters": {
    "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23ArtifactHash37E8FEF6": {
      "Description": "Artifact hash for asset "1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23"",
      "Type": "String",
    },
    "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3Bucket055EC028": {
      "Description": "S3 bucket for asset "1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23"",
      "Type": "String",
    },
    "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3VersionKey6CD46708": {
      "Description": "S3 key for asset version "1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23"",
      "Type": "String",
    },
    "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6ArtifactHashDC036F38": {
      "Description": "Artifact hash for asset "e77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6"",
      "Type": "String",
    },
    "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3BucketF8FF1E48": {
      "Description": "S3 bucket for asset "e77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6"",
      "Type": "String",
    },
    "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3VersionKey8548CBD3": {
      "Description": "S3 key for asset version "e77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6"",
      "Type": "String",
    },
  },
  "Resources": {
    "TestConfigDFE7B72C": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3BucketF8FF1E48",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3VersionKey8548CBD3",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3VersionKey8548CBD3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "TestConfigPythonLibLayer672F8799": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
          "python3.9",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3Bucket055EC028",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3VersionKey6CD46708",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3VersionKey6CD46708",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
  },
}
`;

exports[`visting node lambda runtimes and adding aspects 1`] = `
{
  "Parameters": {
    "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23ArtifactHash37E8FEF6": {
      "Description": "Artifact hash for asset "1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23"",
      "Type": "String",
    },
    "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3Bucket055EC028": {
      "Description": "S3 bucket for asset "1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23"",
      "Type": "String",
    },
    "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3VersionKey6CD46708": {
      "Description": "S3 key for asset version "1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23"",
      "Type": "String",
    },
    "AssetParameters9a512a1198e54699fd9d427f29f91021458fda9d23601e31e4b76bf96d5d7caaArtifactHash8E6713FC": {
      "Description": "Artifact hash for asset "9a512a1198e54699fd9d427f29f91021458fda9d23601e31e4b76bf96d5d7caa"",
      "Type": "String",
    },
    "AssetParameters9a512a1198e54699fd9d427f29f91021458fda9d23601e31e4b76bf96d5d7caaS3Bucket476799AF": {
      "Description": "S3 bucket for asset "9a512a1198e54699fd9d427f29f91021458fda9d23601e31e4b76bf96d5d7caa"",
      "Type": "String",
    },
    "AssetParameters9a512a1198e54699fd9d427f29f91021458fda9d23601e31e4b76bf96d5d7caaS3VersionKey703E74DF": {
      "Description": "S3 key for asset version "9a512a1198e54699fd9d427f29f91021458fda9d23601e31e4b76bf96d5d7caa"",
      "Type": "String",
    },
    "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6ArtifactHashDC036F38": {
      "Description": "Artifact hash for asset "e77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6"",
      "Type": "String",
    },
    "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3BucketF8FF1E48": {
      "Description": "S3 bucket for asset "e77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6"",
      "Type": "String",
    },
    "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3VersionKey8548CBD3": {
      "Description": "S3 key for asset version "e77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6"",
      "Type": "String",
    },
  },
  "Resources": {
    "testConfigWithNodeDDA76C99": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3BucketF8FF1E48",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3VersionKey8548CBD3",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3VersionKey8548CBD3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
          "python3.9",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3Bucket055EC028",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3VersionKey6CD46708",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3VersionKey6CD46708",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": {
      "DependsOn": [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParameters9a512a1198e54699fd9d427f29f91021458fda9d23601e31e4b76bf96d5d7caaS3Bucket476799AF",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters9a512a1198e54699fd9d427f29f91021458fda9d23601e31e4b76bf96d5d7caaS3VersionKey703E74DF",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters9a512a1198e54699fd9d427f29f91021458fda9d23601e31e4b76bf96d5d7caaS3VersionKey703E74DF",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": {
          "Variables": {
            "AWS_SDK_USER_AGENT": "{ "customUserAgent": "AwsSolution/undefined/undefined" }",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Ref": "testConfigWithNodeDDA76C99",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`visting node python runtimes and adding aspects 1`] = `
{
  "Parameters": {
    "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23ArtifactHash37E8FEF6": {
      "Description": "Artifact hash for asset "1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23"",
      "Type": "String",
    },
    "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3Bucket055EC028": {
      "Description": "S3 bucket for asset "1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23"",
      "Type": "String",
    },
    "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3VersionKey6CD46708": {
      "Description": "S3 key for asset version "1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23"",
      "Type": "String",
    },
    "AssetParameters74b315508e16dff1d7bc33aaa3802917e06b160ec133077b33effdc758a6e316ArtifactHash51AAB4E4": {
      "Description": "Artifact hash for asset "74b315508e16dff1d7bc33aaa3802917e06b160ec133077b33effdc758a6e316"",
      "Type": "String",
    },
    "AssetParameters74b315508e16dff1d7bc33aaa3802917e06b160ec133077b33effdc758a6e316S3Bucket69E383EB": {
      "Description": "S3 bucket for asset "74b315508e16dff1d7bc33aaa3802917e06b160ec133077b33effdc758a6e316"",
      "Type": "String",
    },
    "AssetParameters74b315508e16dff1d7bc33aaa3802917e06b160ec133077b33effdc758a6e316S3VersionKeyCAFA29EC": {
      "Description": "S3 key for asset version "74b315508e16dff1d7bc33aaa3802917e06b160ec133077b33effdc758a6e316"",
      "Type": "String",
    },
    "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6ArtifactHashDC036F38": {
      "Description": "Artifact hash for asset "e77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6"",
      "Type": "String",
    },
    "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3BucketF8FF1E48": {
      "Description": "S3 bucket for asset "e77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6"",
      "Type": "String",
    },
    "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3VersionKey8548CBD3": {
      "Description": "S3 key for asset version "e77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6"",
      "Type": "String",
    },
  },
  "Resources": {
    "testConfigWithNodeDDA76C99": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3BucketF8FF1E48",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3VersionKey8548CBD3",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameterse77efca027f552c173f3d4b39af316dea0da94c4c373ab4de84a462dd8e340b6S3VersionKey8548CBD3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
          "python3.9",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3Bucket055EC028",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3VersionKey6CD46708",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters1637f7859a05199878ea129d85fb4f811ca4b87df59817e25934ffb61c7f5e23S3VersionKey6CD46708",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": {
      "DependsOn": [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParameters74b315508e16dff1d7bc33aaa3802917e06b160ec133077b33effdc758a6e316S3Bucket69E383EB",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters74b315508e16dff1d7bc33aaa3802917e06b160ec133077b33effdc758a6e316S3VersionKeyCAFA29EC",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters74b315508e16dff1d7bc33aaa3802917e06b160ec133077b33effdc758a6e316S3VersionKeyCAFA29EC",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": {
          "Variables": {
            "AWS_SDK_USER_AGENT": "{ "user_agent_extra": "AwsSolution/undefined/undefined" }",
          },
        },
        "Handler": "handler",
        "Layers": [
          {
            "Ref": "testConfigWithNodePythonLibLayer75C81C17",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
